@@ -10,8 +10,8 @@ this repository contains the full copyright notices and license terms. -->
             <field name="priority" eval="20"/>
             <field name="arch" type="xml">
                 <![CDATA[
-                <tree string="Menu" keyword_open="1" fill="1">
-                    <field name="name" icon="icon"/>
+                <tree string="Menu" keyword_open="1">
+                    <field name="name" icon="icon" expand="1"/>
                 </tree>
                 ]]>
             </field>
@@ -23,8 +23,8 @@ this repository contains the full copyright notices and license terms. -->
             <field name="priority" eval="10"/>
             <field name="arch" type="xml">
                 <![CDATA[
-                <tree string="Menu" fill="1">
-                    <field name="complete_name" icon="icon"/>
+                <tree string="Menu">
+                    <field name="complete_name" icon="icon" expand="1"/>
                 </tree>
                 ]]>
             </field>
